--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -52,11 +52,13 @@
     <Compile Include="Driveby.cs" />
     <Compile Include="EntitySet.cs" />
     <Compile Include="GangTeam.cs" />
+    <Compile Include="LSPD.cs" />
     <Compile Include="Massacre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racer.cs" />
     <Compile Include="ReplacedVehicle.cs" />
     <Compile Include="Soldier.cs" />
+    <Compile Include="SWAT.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
