--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -49,6 +49,8 @@
     <Compile Include="AdvancedWorld.cs" />
     <Compile Include="AggressiveDriver.cs" />
     <Compile Include="Carjacker.cs" />
+    <Compile Include="Cop.cs" />
+    <Compile Include="Criminal.cs" />
     <Compile Include="Driveby.cs" />
     <Compile Include="EntitySet.cs" />
     <Compile Include="GangTeam.cs" />
@@ -57,7 +59,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racer.cs" />
     <Compile Include="ReplacedVehicle.cs" />
-    <Compile Include="Soldier.cs" />
     <Compile Include="SWAT.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
