--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -49,17 +49,20 @@
     <Compile Include="AdvancedWorld.cs" />
     <Compile Include="AggressiveDriver.cs" />
     <Compile Include="Carjacker.cs" />
-    <Compile Include="Cop.cs" />
+    <Compile Include="Emergency.cs" />
     <Compile Include="Criminal.cs" />
     <Compile Include="Driveby.cs" />
     <Compile Include="EntitySet.cs" />
+    <Compile Include="Firefighter.cs" />
     <Compile Include="GangTeam.cs" />
     <Compile Include="LSPD.cs" />
     <Compile Include="Massacre.cs" />
+    <Compile Include="Paramedic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racer.cs" />
     <Compile Include="ReplacedVehicle.cs" />
     <Compile Include="SWAT.cs" />
+    <Compile Include="SWATHeli.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
