--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="AdvancedWorld.cs" />
     <Compile Include="AggressiveDriver.cs" />
+    <Compile Include="Army.cs" />
+    <Compile Include="ArmyHeli.cs" />
     <Compile Include="Carjacker.cs" />
     <Compile Include="LSPDHeli.cs" />
     <Compile Include="Emergency.cs" />
@@ -66,6 +68,7 @@
     <Compile Include="ReplacedVehicle.cs" />
     <Compile Include="SWAT.cs" />
     <Compile Include="SWATHeli.cs" />
+    <Compile Include="Terrorist.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
