--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Army.cs" />
     <Compile Include="ArmyHeli.cs" />
     <Compile Include="Carjacker.cs" />
+    <Compile Include="EmergencyCar.cs" />
     <Compile Include="EmergencyFire.cs" />
     <Compile Include="EmergencyHeli.cs" />
     <Compile Include="LSPDHeli.cs" />
