--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -47,9 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvancedEntity.cs" />
     <Compile Include="AdvancedWorld.cs" />
     <Compile Include="AggressiveDriver.cs" />
-    <Compile Include="IBlockable.cs" />
     <Compile Include="Carjacker.cs" />
     <Compile Include="EmergencyBlock.cs" />
     <Compile Include="EmergencyCar.cs" />
@@ -61,12 +61,16 @@
     <Compile Include="EntitySet.cs" />
     <Compile Include="Firefighter.cs" />
     <Compile Include="GangTeam.cs" />
+    <Compile Include="ListManager.cs" />
     <Compile Include="Massacre.cs" />
     <Compile Include="Nitroable.cs" />
     <Compile Include="Paramedic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racer.cs" />
+    <Compile Include="Racers.cs" />
     <Compile Include="ReplacedVehicle.cs" />
+    <Compile Include="Shield.cs" />
+    <Compile Include="Stinger.cs" />
     <Compile Include="Terrorist.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Road.cs" />
