--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -48,9 +48,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvancedEntity.cs" />
-    <Compile Include="AdvancedWorld.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="AggressiveDriver.cs" />
     <Compile Include="Carjacker.cs" />
+    <Compile Include="DispatchManager.cs" />
     <Compile Include="EmergencyBlock.cs" />
     <Compile Include="EmergencyCar.cs" />
     <Compile Include="EmergencyFire.cs" />
@@ -61,7 +62,7 @@
     <Compile Include="EntitySet.cs" />
     <Compile Include="Firefighter.cs" />
     <Compile Include="GangTeam.cs" />
-    <Compile Include="ListManager.cs" />
+    <Compile Include="CriminalManager.cs" />
     <Compile Include="Massacre.cs" />
     <Compile Include="Nitroable.cs" />
     <Compile Include="Paramedic.cs" />
