--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Carjacker.cs" />
     <Compile Include="DispatchManager.cs" />
     <Compile Include="EmergencyBlock.cs" />
-    <Compile Include="EmergencyCar.cs" />
+    <Compile Include="EmergencyGround.cs" />
     <Compile Include="EmergencyFire.cs" />
     <Compile Include="EmergencyHeli.cs" />
     <Compile Include="Emergency.cs" />
@@ -62,9 +62,10 @@
     <Compile Include="EntitySet.cs" />
     <Compile Include="Firefighter.cs" />
     <Compile Include="GangTeam.cs" />
-    <Compile Include="CriminalManager.cs" />
+    <Compile Include="EventManager.cs" />
     <Compile Include="Massacre.cs" />
     <Compile Include="Nitroable.cs" />
+    <Compile Include="OnFire.cs" />
     <Compile Include="Paramedic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racer.cs" />
