--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{FC2A45E8-0BB4-4DF3-AD8C-473049A11DB3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AdvancedWorld</RootNamespace>
+    <RootNamespace>YouAreNotAlone</RootNamespace>
     <AssemblyName>AdvancedWorld</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvancedEntity.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AggressiveDriver.cs" />
     <Compile Include="Carjacker.cs" />
