--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Terrorist.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Road.cs" />
+    <Compile Include="VehicleName.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
