--- a/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
+++ b/AdvancedWorld/AdvancedWorld/AdvancedWorld.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvancedEntity.cs" />
+    <Compile Include="AdvancedScript.cs" />
     <Compile Include="ICheckable.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Main.cs" />
